# proppy

./: .gitignore  LICENSE  README.md  link-attributes-gis.ipynb  requirements.txt  setup.cfg
docs/source/: conf.py  index.rst
examples/: query_los_demo.py  query_los_multiprocess_demo.py
examples/antwerp/: README.md  learn_model.ipynb  make_geodata.ipynb  make_geodata.py  make_linkdata.ipynb  query_antwerp.py  torch_example.ipynb
examples/tcat/: README.md  tcat_clean.ipynb
src/proppy/: data.py  raster.py  shapes.py
src/proppy/models/: __init__.py  loglinear  loglinear.py
