[metadata]
name = proppy
description = Wireless propagation tools
author = Sander Aarts
license = MIT
license_file = LICENSE
platforms = unix, linux, osx
classifiers =
	Programming Laungage :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10

python_requires = >=3.6
install_requres = 
	geopandas>=0.12
package_rid = 
	src
zip_safe = no

[options.packages.find]
where = src